{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 79,
  "lineage": "837f10b1-0cb2-a123-c84a-03011f59a6c0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-EUS-0",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-0",
                "primary": true,
                "private_ip_address": "192.168.2.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-0",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC-EUS-0",
            "private_ip_address": "192.168.2.8",
            "private_ip_addresses": [
              "192.168.2.8"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.eus",
            "azurerm_resource_group.main",
            "azurerm_subnet.eus",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-EUS-1",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-1",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-1",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC-EUS-1",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.eus",
            "azurerm_resource_group.main",
            "azurerm_subnet.eus",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-EUS-2",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-2",
                "primary": true,
                "private_ip_address": "192.168.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-2",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC-EUS-2",
            "private_ip_address": "192.168.2.5",
            "private_ip_addresses": [
              "192.168.2.5"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.eus",
            "azurerm_resource_group.main",
            "azurerm_subnet.eus",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-EUS-3",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-3",
                "primary": true,
                "private_ip_address": "192.168.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-3",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC-EUS-3",
            "private_ip_address": "192.168.2.6",
            "private_ip_addresses": [
              "192.168.2.6"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.eus",
            "azurerm_resource_group.main",
            "azurerm_subnet.eus",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-EUS-4",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-4",
                "primary": true,
                "private_ip_address": "192.168.2.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-4",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
              }
            ],
            "location": "eastus",
            "name": "VM-NIC-EUS-4",
            "private_ip_address": "192.168.2.7",
            "private_ip_addresses": [
              "192.168.2.7"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.eus",
            "azurerm_resource_group.main",
            "azurerm_subnet.eus",
            "azurerm_virtual_network.eus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ncus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-NCUS-0",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-0",
                "primary": true,
                "private_ip_address": "192.168.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-0",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
              }
            ],
            "location": "northcentralus",
            "name": "VM-NIC-NCUS-0",
            "private_ip_address": "192.168.1.6",
            "private_ip_addresses": [
              "192.168.1.6"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.ncus",
            "azurerm_resource_group.main",
            "azurerm_subnet.ncus",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-NCUS-1",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-1",
                "primary": true,
                "private_ip_address": "192.168.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-1",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
              }
            ],
            "location": "northcentralus",
            "name": "VM-NIC-NCUS-1",
            "private_ip_address": "192.168.1.8",
            "private_ip_addresses": [
              "192.168.1.8"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.ncus",
            "azurerm_resource_group.main",
            "azurerm_subnet.ncus",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-NCUS-2",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-2",
                "primary": true,
                "private_ip_address": "192.168.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-2",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
              }
            ],
            "location": "northcentralus",
            "name": "VM-NIC-NCUS-2",
            "private_ip_address": "192.168.1.7",
            "private_ip_addresses": [
              "192.168.1.7"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.ncus",
            "azurerm_resource_group.main",
            "azurerm_subnet.ncus",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-NCUS-3",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-3",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-3",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
              }
            ],
            "location": "northcentralus",
            "name": "VM-NIC-NCUS-3",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.ncus",
            "azurerm_resource_group.main",
            "azurerm_subnet.ncus",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-NCUS-4",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-4",
                "primary": true,
                "private_ip_address": "192.168.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-4",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
              }
            ],
            "location": "northcentralus",
            "name": "VM-NIC-NCUS-4",
            "private_ip_address": "192.168.1.5",
            "private_ip_addresses": [
              "192.168.1.5"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.ncus",
            "azurerm_resource_group.main",
            "azurerm_subnet.ncus",
            "azurerm_virtual_network.ncus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "scus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-SCUS-0",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-0",
                "primary": true,
                "private_ip_address": "192.168.4.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-0",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4"
              }
            ],
            "location": "southcentralus",
            "name": "VM-NIC-SCUS-0",
            "private_ip_address": "192.168.4.6",
            "private_ip_addresses": [
              "192.168.4.6"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.scus",
            "azurerm_resource_group.main",
            "azurerm_subnet.scus",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-SCUS-1",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-1",
                "primary": true,
                "private_ip_address": "192.168.4.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-1",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4"
              }
            ],
            "location": "southcentralus",
            "name": "VM-NIC-SCUS-1",
            "private_ip_address": "192.168.4.7",
            "private_ip_addresses": [
              "192.168.4.7"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.scus",
            "azurerm_resource_group.main",
            "azurerm_subnet.scus",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-SCUS-2",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-2",
                "primary": true,
                "private_ip_address": "192.168.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-2",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4"
              }
            ],
            "location": "southcentralus",
            "name": "VM-NIC-SCUS-2",
            "private_ip_address": "192.168.4.4",
            "private_ip_addresses": [
              "192.168.4.4"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.scus",
            "azurerm_resource_group.main",
            "azurerm_subnet.scus",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-SCUS-3",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-3",
                "primary": true,
                "private_ip_address": "192.168.4.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-3",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4"
              }
            ],
            "location": "southcentralus",
            "name": "VM-NIC-SCUS-3",
            "private_ip_address": "192.168.4.5",
            "private_ip_addresses": [
              "192.168.4.5"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.scus",
            "azurerm_resource_group.main",
            "azurerm_subnet.scus",
            "azurerm_virtual_network.scus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "wus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-WUS-0",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-0",
                "primary": true,
                "private_ip_address": "192.168.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-0",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
              }
            ],
            "location": "westus",
            "name": "VM-NIC-WUS-0",
            "private_ip_address": "192.168.3.4",
            "private_ip_addresses": [
              "192.168.3.4"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.wus",
            "azurerm_resource_group.main",
            "azurerm_subnet.wus",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-WUS-1",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-1",
                "primary": true,
                "private_ip_address": "192.168.3.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-1",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
              }
            ],
            "location": "westus",
            "name": "VM-NIC-WUS-1",
            "private_ip_address": "192.168.3.7",
            "private_ip_addresses": [
              "192.168.3.7"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.wus",
            "azurerm_resource_group.main",
            "azurerm_subnet.wus",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-WUS-2",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-2",
                "primary": true,
                "private_ip_address": "192.168.3.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-2",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
              }
            ],
            "location": "westus",
            "name": "VM-NIC-WUS-2",
            "private_ip_address": "192.168.3.6",
            "private_ip_addresses": [
              "192.168.3.6"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.wus",
            "azurerm_resource_group.main",
            "azurerm_subnet.wus",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-WUS-3",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-3",
                "primary": true,
                "private_ip_address": "192.168.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-3",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
              }
            ],
            "location": "westus",
            "name": "VM-NIC-WUS-3",
            "private_ip_address": "192.168.3.5",
            "private_ip_addresses": [
              "192.168.3.5"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.wus",
            "azurerm_resource_group.main",
            "azurerm_subnet.wus",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkInterfaces/VM-NIC-WUS-4",
            "ip_configuration": [
              {
                "name": "VM-NIC-CONFIG-4",
                "primary": true,
                "private_ip_address": "192.168.3.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-4",
                "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
              }
            ],
            "location": "westus",
            "name": "VM-NIC-WUS-4",
            "private_ip_address": "192.168.3.8",
            "private_ip_addresses": [
              "192.168.3.8"
            ],
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_public_ip.wus",
            "azurerm_resource_group.main",
            "azurerm_subnet.wus",
            "azurerm_virtual_network.wus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "eus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-EUS",
            "location": "eastus",
            "name": "DEFUALT-NSG-EUS",
            "resource_group_name": "ACE-WINLAB-DEV",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ncus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-NCUS",
            "location": "northcentralus",
            "name": "DEFUALT-NSG-NCUS",
            "resource_group_name": "ACE-WINLAB-DEV",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "scus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-SCUS",
            "location": "southcentralus",
            "name": "DEFUALT-NSG-SCUS",
            "resource_group_name": "ACE-WINLAB-DEV",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "wus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-WUS",
            "location": "westus",
            "name": "DEFUALT-NSG-WUS",
            "resource_group_name": "ACE-WINLAB-DEV",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "EUS_RDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-EUS/securityRules/Allow RDP From Anywhere",
            "name": "Allow RDP From Anywhere",
            "network_security_group_name": "DEFUALT-NSG-EUS",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ACE-WINLAB-DEV",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.eus",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NCUS_RDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-NCUS/securityRules/Allow RDP From Anywhere",
            "name": "Allow RDP From Anywhere",
            "network_security_group_name": "DEFUALT-NSG-NCUS",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ACE-WINLAB-DEV",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.ncus",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "SCUS_RDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-SCUS/securityRules/Allow RDP From Anywhere",
            "name": "Allow RDP From Anywhere",
            "network_security_group_name": "DEFUALT-NSG-SCUS",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ACE-WINLAB-DEV",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.scus",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "WUS_RDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-WUS/securityRules/Allow RDP From Anywhere",
            "name": "Allow RDP From Anywhere",
            "network_security_group_name": "DEFUALT-NSG-WUS",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "ACE-WINLAB-DEV",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "depends_on": [
            "azurerm_network_security_group.wus",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "eus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.180.212",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PIP-EUS-0",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.41.130.189",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PIP-EUS-1",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.180.226",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PIP-EUS-2",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.181.14",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PIP-EUS-3",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-EUS-4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.181.53",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "VM-PIP-EUS-4",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ncus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.210.74",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "VM-PIP-NCUS-0",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "65.52.54.147",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "VM-PIP-NCUS-1",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.214.16",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "VM-PIP-NCUS-2",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.210.47",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "VM-PIP-NCUS-3",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-NCUS-4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.211.152",
            "ip_version": "IPv4",
            "location": "northcentralus",
            "name": "VM-PIP-NCUS-4",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "scus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.124.49.230",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "VM-PIP-SCUS-0",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.124.49.252",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "VM-PIP-SCUS-1",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.124.48.91",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "VM-PIP-SCUS-2",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.scus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-SCUS-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.124.49.247",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "VM-PIP-SCUS-3",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.scus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "wus",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.70.197",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "VM-PIP-WUS-0",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.77.39",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "VM-PIP-WUS-1",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.79.51",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "VM-PIP-WUS-2",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.99.65.21",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "VM-PIP-WUS-3",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/publicIPAddresses/VM-PIP-WUS-4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.69.116",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "VM-PIP-WUS-4",
            "resource_group_name": "ACE-WINLAB-DEV",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "eus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/28",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2",
            "name": "ACE-VM-SUBNET2",
            "resource_group_name": "ACE-WINLAB-DEV",
            "virtual_network_name": "ACE-WINLAB-VNET2"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.eus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ncus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/28",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1",
            "name": "ACE-VM-SUBNET1",
            "resource_group_name": "ACE-WINLAB-DEV",
            "virtual_network_name": "ACE-WINLAB-VNET1"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.ncus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "scus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.4.0/28",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4",
            "name": "ACE-VM-SUBNET4",
            "resource_group_name": "ACE-WINLAB-DEV",
            "virtual_network_name": "ACE-WINLAB-VNET4"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.scus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "wus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.3.0/28",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3",
            "name": "ACE-VM-SUBNET3",
            "resource_group_name": "ACE-WINLAB-DEV",
            "virtual_network_name": "ACE-WINLAB-VNET3"
          },
          "depends_on": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.wus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "eus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2",
            "network_security_group_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-EUS",
            "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2/subnets/ACE-VM-SUBNET2"
          },
          "depends_on": [
            "azurerm_network_security_group.eus",
            "azurerm_subnet.eus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ncus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1",
            "network_security_group_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-NCUS",
            "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1/subnets/ACE-VM-SUBNET1"
          },
          "depends_on": [
            "azurerm_network_security_group.ncus",
            "azurerm_subnet.ncus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "scus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4",
            "network_security_group_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-SCUS",
            "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4/subnets/ACE-VM-SUBNET4"
          },
          "depends_on": [
            "azurerm_network_security_group.scus",
            "azurerm_subnet.scus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "wus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3",
            "network_security_group_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/networkSecurityGroups/DEFUALT-NSG-WUS",
            "subnet_id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3/subnets/ACE-VM-SUBNET3"
          },
          "depends_on": [
            "azurerm_network_security_group.wus",
            "azurerm_subnet.wus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "eus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.2.0/24"
            ],
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET2",
            "location": "eastus",
            "name": "ACE-WINLAB-VNET2",
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ncus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.1.0/24"
            ],
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET1",
            "location": "northcentralus",
            "name": "ACE-WINLAB-VNET1",
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "scus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.4.0/24"
            ],
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET4",
            "location": "southcentralus",
            "name": "ACE-WINLAB-VNET4",
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "wus",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.3.0/24"
            ],
            "id": "/subscriptions/928dcbe5-e163-432f-9185-0550b1a94cf3/resourceGroups/ACE-WINLAB-DEV/providers/Microsoft.Network/virtualNetworks/ACE-WINLAB-VNET3",
            "location": "westus",
            "name": "ACE-WINLAB-VNET3",
            "resource_group_name": "ACE-WINLAB-DEV"
          },
          "depends_on": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}